compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__const_annotation_wrong.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1116
expression: "pub const group_id: Int = \"42\""

---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:27
  │
1 │ pub const group_id: Int = "42"
  │                           ^^^^

Expected type:

    Int

Found type:

    String


